<package>
  <name>leatherman</name>
  <version>0.0.0</version>
  <description>The leatherman package</description>
  <author>Benjamin Cohen</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>

